[profile.dev]
lto = true

[profile.release]
lto = true

[workspace]
members = [
    "apps/helloworld",
    "apps/user_boot",
    "apps/fs/shell",
    "modules/async_axhal",
    "modules/async_utils",
    "modules/async_io",
    "modules/async_std",
    "modules/async_fs",
    "modules/async_vfs",
    "modules/async_api",
    "modules/async_mem",
    "modules/taskctx",
    "modules/trampoline",
    "modules/executor",
    "modules/sync",
    "modules/runtime",
    "modules/arch_boot",
    "modules/syscall",
    "modules/feat",
    # My additions:
    "modules/async_futures-bounded",
    "modules/async_futures-timer",
    "apps/collections",
    "user_apps",
]

resolver = "2"
