[package]
name = "akm"
version = "0.1.0"
edition = "2021"

[dependencies]
async_std = { path = "../../modules/async_std", features = [
    "irq",
    "multitask"
] }
ak_futures-timer = { path = "../../modules/ak_futures-timer" }
ak_futures-bounded = { path = "../../modules/ak_futures-bounded" }
futures-util = { version = "0.3.30", default-features = false, features = [
    "alloc"
] }
futures-channel = { version = "0.3", default-features = false, features = [
    "alloc"
] }
