[package]
name = "akm"
version = "0.1.0"
edition = "2021"

[dependencies]
async_std = { path = "../../modules/async_std", features = [
    "irq",
    "multitask",
    "net"
] }
multihash = { path = "../../modules/ak_addition/ak_multihash", default-features = false, features = [
    "alloc"
] }
bs58 = { path = "../../modules/ak_addition/ak_bs58", default-features = false, features = [
    "alloc"
] }
# ak_futures-timer = { path = "../../modules/ak_addition/ak_futures-timer" }
# ak_futures-bounded = { path = "../../modules/ak_addition/ak_futures-bounded" }
