[package]
name = "collections"
version = "0.1.0"
edition = "2021"

[dependencies]
async_std = { path = "../../modules/async_std", features = [
    "irq",
    "multitask",
    "fs",
] }
async_futures-timer = { path = "../../modules/async_futures-timer" }
# async_axsync_with_sync = { path = "../../modules/async_axsync_with_sync", features = [
#     "multitask",
# ] }
# async_axtask_ZFL = { path = "../../modules/async_axtask_ZFL", package = "axtask", features = [
#     "multitask",
# ] }
